2010-11-10 Harri Pitkänen <hatapitk@iki.fi>
	* Fix strict aliasing bug (Trac #20) and a some const correctness
	  issues that were uncovered by the fix.

2010-11-08 Harri Pitkänen <hatapitk@iki.fi>
	* Update MSVC build files.

2010-10-27 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Allow AutoCorrect rules with more than two match words.
	* Support capitalized first character of sentence when interpreting
	  AutoCorrect rules.

2010-10-26 Harri Pitkänen <hatapitk@iki.fi>
	* Increase maximum spelling suggestion search cost by 28 % to match
	  recent optimizations and CPU speed improvements.

2010-10-25 Harri Pitkänen <hatapitk@iki.fi>
	* Capitalized initials may appear within sentences.

2010-10-24 Harri Pitkänen <hatapitk@iki.fi>
	* Add check for incorrect infinitive form in compound verbs.

2010-10-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add A-infinitive and E-infinitive to MalagaAnalyzer.

2010-10-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add MA-infinitive to MalagaAnalyzer.

2010-10-10 Harri Pitkänen <hatapitk@iki.fi>
	* Add configure option --disable-malaga for disabling Malaga backend.

2010-09-27 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Don't suggest using lower case when the word may be a geographical name.

2010-09-21 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Accept bracketed reference at the end of sentence.

2010-09-13 Harri Pitkänen <hatapitk@iki.fi>
	* Handle cases where an optional symbol is not found from Malaga symbol
	  table. This can happen when older v2 morphologies are used.

2010-09-12 Harri Pitkänen <hatapitk@iki.fi>
	* Support new attribute NEGATIVE in morphological analysis.
	* Warn about "en juoksen" in grammar checker.

2010-09-04 Harri Pitkänen <hatapitk@iki.fi>
	* Accept "A:n".

2010-08-22 Harri Pitkänen <hatapitk@iki.fi>
	* Accept words like "ja-sana" (Trac #13).

2010-08-21 Harri Pitkänen <hatapitk@iki.fi>
	* Separate Finnish/Malaga specific speller tweaks from common speller code.

2010-06-30 Harri Pitkänen <hatapitk@iki.fi>